--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
     display: flex;
@@ -7,20 +7,39 @@ body {
   }
   
   .header {
-    height: 72px;
-    background: darkmagenta;
+    height: 300px;
+    background: #1F2937;
     color: white;
     display: flex;
-    justify-content: left ;
-    align-items: center;
-    font-size: 32px;
-    font-weight: 900;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    font-size: 48px;
+    font-weight: bolder;
     padding: 0px 16px;
+  }
+
+  .headone{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 400px;
+  }
+  
+  .secondary{
+    font-size: 18px;
+    color: #E5E7EB;
+  }
+
+  .logo{
+    font-size: 24px;
+    color: #F9FAF8;
   }
   
   .footer {
     height: 72px;
-    background: #eee;
+    background: #1F2937;
     color: darkmagenta;
     justify-content: center;
     align-items: center;
@@ -67,4 +86,14 @@ body {
     display: flex;
     flex: 1;
     flex-wrap: wrap;
+  }
+  button{
+    background-color: #3882f6;
+    color: white;
+  }
+
+  .quote{
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
   }
