--- a/style.css
+++ b/style.css
@@ -91,10 +91,21 @@ body {
     background-color: #3882f6;
     color: white;
     border-radius: 5px;
+    border: 0px;
+    width: 80px;
+    height: 20px;
   }
 
   .quote{
     font-size: 36px;
     font-style: italic;
     color: #1F2937;
+  }
+
+  .top {
+    display:flex;
+    font-size: small;
+    justify-content: space-between;
+    align-items: end;
+    flex-direction: row;
   }
