--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     font-size: 48px;
     font-weight: bolder;
-    padding: 0px 16px;
+    padding: 0px 25px;
   }
 
   .headone{
@@ -64,7 +64,7 @@ body {
     display: flex;
   }
   
-  .card {
+  /*.card {
     border: 1px solid #eee;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
@@ -75,22 +75,23 @@ body {
     margin: 15px;
     width: 300px;
     height: 300px;
-  }
+  }*/
   
   a{
     text-decoration: none;
     color: #eee;
   }
   
-  li{
+  /*li{
     list-style-type: none;
-  }
+  }*/
   
-  .cards{
+  /*.cards{
     display: flex;
     flex: 1;
     flex-wrap: wrap;
-  }
+  }*/
+
   button{
     background-color: #3882f6;
     color: white;
@@ -110,8 +111,7 @@ body {
   .top {
     display:flex;
     font-size: small;
-    justify-content: space-evenly;
-    height: 400px;
+    //height: 400px;
   }
 
   .logo{
@@ -125,5 +125,23 @@ body {
     display: flex;
     flex-direction: row;
     align-items: start;
+    justify-content: end;
     margin: 10px;
+  }
+
+  .sectiontwo{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+
+  .twocontent{
+    display: flex;
+    justify-content: center;
+    border: #3882f6;
+    border-width: 10px;
+    height: 200px;
+    width: 200px;
   }
