--- a/style.css
+++ b/style.css
@@ -137,11 +137,28 @@ body {
     
   }
 
-  .twocontent{
+  .twobox{
     display: flex;
-    justify-content: center;
-    border: #3882f6;
-    border-width: 10px;
-    height: 200px;
-    width: 200px;
+
+  }
+
+  .twocontent{
+    border: 3px solid #3882f6;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 32px;
+    margin: 15px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .twotext{
+    width: 50px;
+    padding-left: 32px;
+    padding-right: 32px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
