--- a/style.css
+++ b/style.css
@@ -134,7 +134,12 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    height: 400px;
     
+  }
+
+  .twotitle{
+    font-size: 40px;
   }
 
   .twobox{
