--- a/style.css
+++ b/style.css
@@ -102,10 +102,29 @@ body {
     margin: 5px;
   }
 
+  .sectionthree{
+    background-color: #EFE7EB;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    //align-items: center;
+    flex-direction: column;
+  }
+  
   .quote{
     font-size: 36px;
     font-style: italic;
     color: #1F2937;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+  }
+
+  .subquote{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: end;
   }
 
   .top {
