--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   .footer {
     height: 72px;
     background: #1F2937;
-    color: darkmagenta;
+    color: white;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -64,33 +64,11 @@ body {
     display: flex;
   }
   
-  /*.card {
-    border: 1px solid #eee;
-    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 32px;
-    margin: 15px;
-    width: 300px;
-    height: 300px;
-  }*/
   
   a{
     text-decoration: none;
     color: #eee;
   }
-  
-  /*li{
-    list-style-type: none;
-  }*/
-  
-  /*.cards{
-    display: flex;
-    flex: 1;
-    flex-wrap: wrap;
-  }*/
 
   button{
     background-color: #3882f6;
@@ -117,7 +95,8 @@ body {
     color: #1F2937;
     justify-content: center;
     align-items: center;
-    margin: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
   }
 
   .subquote{
@@ -125,6 +104,34 @@ body {
     flex-direction: row;
     justify-content: end;
     align-items: end;
+    padding-left: 100px;
+    padding-right: 100px;
+    font-weight: bold;
+  }
+
+  .sectionfour{
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    
+  }
+
+  .inlay{
+    align-items: center;
+    background-color: #3882f6;
+    border-radius: 15px;
+    width: max-10px;
+  }
+
+  .fourhead{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fourbody{
+    display: flex;
+    justify-content: center;
   }
 
   .top {
