--- a/style.css
+++ b/style.css
@@ -110,44 +110,61 @@ body {
   }
 
   .sectionfour{
-    height: 400px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
-    
   }
 
+  .sectionfour button{
+    border: 2px solid white;
+  }
+
+
   .inlay{
-    align-items: center;
-    justify-content: center;
     background-color: #3882f6;
-    border-radius: 15px;
+    border-radius: 5px;
     width: max-10px;
     height: 100px;
+    flex: 1;
+    margin-left: 100px;
+    margin-right: 100px;
+    flex-direction: row;
+  }
+
+  .part1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+  }
+
+  .part2{
+    display: flex;
+    justify-content: end;
   }
 
   .fourhead{
-    display: flex;
-    //justify-content: center;
     align-items: center;
     color: white;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
+    font-size: 16px;
+    font-weight: bold;
   }
 
   .fourbody{
-    display: flex;
     //justify-content: center;
     color: white;
     padding-left: 20px;
     padding-right: 20px;
+    font-size: 14px
   }
 
   .top {
     display:flex;
     font-size: small;
-    //height: 400px;
   }
 
   .logo{
